# device_board_orangepi_fork

./: README.en.md  README.md  README_zh.md
orangepi_5b/: BUILD.gn  README_zh.md  device.gni  ohos.build
orangepi_5b/audio_alsa/: common.h
orangepi_5b/audio_drivers/: Makefile
orangepi_5b/audio_drivers/accessory/es8323/src/: es8323_impl.c
orangepi_5b/camera/vdi_impl/v4l2/: BUILD.gn
orangepi_5b/camera/vdi_impl/v4l2/device_manager/: BUILD.gn
orangepi_5b/camera/vdi_impl/v4l2/pipeline_core/: BUILD.gn
orangepi_5b/cfg/: BUILD.gn  fstab.rk3588  init.rk3588.bat  init.rk3588.cfg  init.rk3588.sh  init.rk3588.usb.cfg
orangepi_5b/cfg/etc/param/: display.para  ohos.para  ohos.para.bat
orangepi_5b/cfg/selinux/: config
orangepi_5b/distributedhardware/: BUILD.gn
orangepi_5b/hardware/: BUILD.gn
orangepi_5b/hardware/audio/: BUILD.gn
orangepi_5b/hardware/audio/include/: alsa_lib_common.h
orangepi_5b/hardware/audio/src/: alsa_lib_capture.c  alsa_lib_common.c  alsa_lib_render.c
orangepi_5b/kernel/: BUILD.gn  build_kernel.sh  make-boot.sh  make-ohos.sh  patch_hdf.sh  rebuild_kernel.sh
orangepi_5b/kernel.4.1/: BUILD.gn  build_kernel.sh  rebuild_kernel.sh
orangepi_5b/kernel.4.1/config/: README.md  rk3588s_standard_defconfig.hdmi
orangepi_5b/kernel.4.1/drivers/dts/: rk3588-linux.dtsi  rk3588s-orangepi.dtsi
orangepi_5b/kernel.4.1/drivers/dts.hdmi/: rk3588-linux.dtsi
orangepi_5b/kernel.4.1/patch/: kernel.patch
orangepi_5b/kernel/config/: rk3588s_standard_defconfig  rk3588s_standard_defconfig.hdmi  rk3588s_standard_defconfig.logo  rk3588s_standard_defconfig.mipi
orangepi_5b/kernel/drivers/: dts
orangepi_5b/kernel/drivers/dts/: rk3588s-orangepi-5-lcd.dtsi  rk3588s-orangepi-5.dtsi  rk3588s-orangepi-5b.dts  rk3588s-orangepi.dtsi  rk3588s.dtsi
orangepi_5b/kernel/drivers/dts.hdmi/: rk3588s-orangepi-5.dtsi  rk3588s-orangepi-5b.dts
orangepi_5b/kernel/drivers/dts.mipi/: rk3588-linux.dtsi  rk3588s-orangepi-5.dts
orangepi_5b/loader/: config.cfg  config_hdmi.cfg  parameter.txt
orangepi_5b/loader/hdmi/: README.md  display_manager_config.bat  display_manager_config.xml
orangepi_5b/patches/: auto_patch.sh
orangepi_5b/patches/applications#standard#hap/: 0001-disable-prebuild-navigation-bar.patch
orangepi_5b/patches/base#hiviewdfx#hiview/: 0001-fixed-compile-error.patch
orangepi_5b/patches/base#location/: 0001-fixed-compile-error.patch
orangepi_5b/patches/base#notification#distributed_notification_service/: 0001-fixed-compile-error.patch
orangepi_5b/patches/base#startup#appspawn/: 0001-fixed-compile-error.patch
orangepi_5b/patches/base#time#time_service/: 0001-fixed-compile-error.patch
orangepi_5b/patches/developtools#integration_verification/: 0001-update-chipsetsdk-whitelist.patch
orangepi_5b/patches/developtools#profiler/: 0001-fixed-compile-error.patch
orangepi_5b/patches/drivers#hdf_core/: 0001-fixed-compile-error.patch  0001-update-OsalGetSysTimeMs-declaration.patch
orangepi_5b/patches/foundation#CastEngine#castengine_cast_framework/: 0001-fixed-compile-error.patch
orangepi_5b/patches/foundation#ability#ability_runtime/: 0001-fixed-compile-error.patch
orangepi_5b/patches/foundation#ability#form_fwk/: 0001-fixed-compile-error.patch
orangepi_5b/patches/foundation#arkui#ace_engine/: 0001-fixed-compile-error.patch
orangepi_5b/patches/foundation#bundlemanager#bundle_framework/: 0001-fixed-compile-error.patch
orangepi_5b/patches/foundation#communication#bluetooth_service/: 0001-fixed-compile-error.patch
orangepi_5b/patches/foundation#communication#netmanager_base/: 0001-fixed-compile-error.patch
orangepi_5b/patches/foundation#communication#netstack/: 0001-fixed-compile-error.patch
orangepi_5b/patches/foundation#communication#wifi/: 0001-fixed-compile-error.patch
orangepi_5b/patches/foundation#distributeddatamgr#datamgr_service/: 0001-fixed-compile-error.patch
orangepi_5b/patches/foundation#filemanagement#dfs_service/: 0001-fixed-compile-error.patch
orangepi_5b/patches/foundation#graphic#graphic_2d/: 0001-fixed-compile-error.patch
orangepi_5b/patches/foundation#multimedia#camera_framework/: 0001-fixed-compile-error.patch
orangepi_5b/patches/foundation#multimedia#media_library/: 0001-fixed-compile-error.patch
orangepi_5b/patches/foundation#window#window_manager/: 0001-add-missing-feature-config.patch  0001-fixed-compile-error.patch
orangepi_5b/prebuilts/: BUILD.gn
orangepi_5b/resources/: BUILD.gn
orangepi_5b/resources/config/: config.bat  window_manager_config.xml
orangepi_5b/resources/hap/: Browser.hap  F-OH-1.3.4.hap  F-OH.hap  FileManager.hap  Launcher_Settings.hap  NdkOpenGL.hap  SystemUI-NavigationBar.hap  SystemUI-ScreenLock.hap
orangepi_5b/resources/hap/Appstore/: appstore.hap
orangepi_5b/resources/hap/Browser/: browser.hap
orangepi_5b/resources/hap/Filemanager/: filemanager.hap
orangepi_5b/resources/tools/: busybox  debug.bat  tools.bat
orangepi_5b/startup/reboot_loader/: BUILD.gn
orangepi_5b/test/: BUILD.gn
orangepi_5b/uboot/: BUILD.gn  build_uboot.sh
orangepi_5b/uboot/u-boot-orangepi/: make.sh
orangepi_5b/uboot/u-boot-orangepi/arch/arm/dts/: rk3588s.dtsi
orangepi_5b/uboot/u-boot-orangepi/cmd/: pxe.c
orangepi_5b/uboot/u-boot-orangepi/configs/: orangepi_5b_defconfig
orangepi_5b/uboot/u-boot-orangepi/fit/: uboot.itb
orangepi_5b/uboot/u-boot-orangepi/include/: openharmony_boot.h
orangepi_5b/uboot/u-boot-orangepi/include/config/: auto.conf  tristate.conf
orangepi_5b/uboot/u-boot-orangepi/tools/: loaderimage
orangepi_5b/updater/: BUILD.gn
orangepi_5b/updater/config/: fstab.updater  init.cfg
