# Copyright (C) 2023 AlgoIdeas <yu19881234@163.com>
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("device.gni")

print("orangepi_group in")
group("orangepi_group") {
  deps = [
    "cfg:init_configs",
    "distributedhardware:distributedhardware",
    "hardware:hardware",
    "kernel:kernel",
    "resources:resources",
    "updater:updater_files",
    "//device/soc/rockchip/rk3588s/hardware:hardware_group",
    "//third_party/alsa-utils:alsa-utils",
  ]

  if (is_support_graphic) {
    deps += [
      "//device/soc/rockchip/rk3588s/hardware/display:display_buffer_model",
      "//device/soc/rockchip/rk3588s/hardware/display:display_composer_model",
    ]
  }

  if (is_support_codec) {
    deps += [
      "//device/soc/rockchip/rk3588s/hardware/codec:codec_oem_interface",
      "//device/soc/rockchip/rk3588s/hardware/omx_il:lib_omx",
    ]
  }

  if (is_standard_system) {
    deps += [ "startup/reboot_loader:rebootloader" ]
  }
}
