# Copyright (C) 2023 AlgoIdeas <yu19881234@163.com>
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_prebuilt_etc("init.cfg") {
  source = "init.cfg"
  module_install_dir = "etc"
  install_images = [ "system" ]
  install_enable = true
  part_name = "rockchip_products"
}

ohos_prebuilt_etc("init.rk3588.cfg") {
  source = "init.rk3588.cfg"
  part_name = "rockchip_products"
  install_images = [ chipset_base_dir ]
  install_enable = true
}

ohos_prebuilt_executable("init.rk3588.sh") {
  source = "init.rk3588.sh"
  module_install_dir = "bin"
  install_images = [ "vendor" ]
  part_name = "rockchip_products"
  install_enable = true
}

ohos_prebuilt_etc("init.rk3588.usb.cfg") {
  source = "init.rk3588.usb.cfg"
  part_name = "rockchip_products"
  install_images = [ chipset_base_dir ]
  install_enable = true
}

ohos_prebuilt_etc("fstab.rk3588") {
  source = "fstab.rk3588"
  part_name = "rockchip_products"
  install_images = [ vendor_base_dir ]
  install_enable = true
}

ohos_prebuilt_etc("selinux_config") {
  source = "selinux/config"
  part_name = "rockchip_products"
  module_install_dir = "etc/selinux"
  install_images = [ "system" ]
  install_enable = true
}

ohos_prebuilt_etc("sysctl.conf") {
  source = "sysctl.conf"
  install_images = [
    "system",
    "ramdisk",
  ]
  install_enable = true
  part_name = "rockchip_products"
}

ohos_prebuilt_etc("param_for_display") {
  source = "etc/param/display.para"
  relative_install_dir = "param"
  part_name = "rockchip_products"
}

ohos_prebuilt_etc("param_for_ohos") {
  source = "etc/param/ohos.para"
  install_images = [ "system" ]
  relative_install_dir = "param"
  part_name = "rockchip_products"
}

group("init_configs") {
  deps = [
    ":fstab.rk3588",
    ":init.rk3588.cfg",
    ":init.rk3588.sh",
    ":init.rk3588.usb.cfg",
    ":param_for_display",
    ":param_for_ohos",
    ":selinux_config",
    ":sysctl.conf",
  ]
}
