# Copyright (c) 2023 AlgoIdeas <yu19881234@163.com>
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_prebuilt_executable("modetest") {
  source = "tools/bin/modetest"
  module_install_dir = "bin"
  install_images = [ "vendor" ]
  part_name = "rockchip_products"
  install_enable = true
}

ohos_prebuilt_executable("busybox") {
  source = "tools/bin/busybox"
  module_install_dir = "bin"
  install_images = [ "vendor" ]
  part_name = "rockchip_products"
  install_enable = true
}

ohos_prebuilt_executable("media-ctl") {
  source = "tools/bin/media-ctl"
  module_install_dir = "bin"
  install_images = [ "vendor" ]
  part_name = "rockchip_products"
  install_enable = true
}

ohos_prebuilt_executable("v4l2-ctl") {
  source = "tools/bin/v4l2-ctl"
  module_install_dir = "bin"
  install_images = [ "vendor" ]
  part_name = "rockchip_products"
  install_enable = true
}

ohos_prebuilt_etc("browser_hap") {
  source = "hap/Browser.hap"
  module_install_dir = "app/org.ohos.browser.cm"
  install_enable = true
  part_name = "rockchip_products"
  subsystem_name = "applications"
}

ohos_prebuilt_etc("f_oh_hap") {
  source = "hap/F-OH-1.3.4.hap"
  module_install_dir = "app/org.ohosdev.foh"
  install_enable = true
  part_name = "rockchip_products"
  subsystem_name = "applications"
}

ohos_prebuilt_etc("ndk_opengl_hap") {
  source = "hap/NdkOpenGL.hap"
  module_install_dir = "app/com.samples.ndkopengl"
  install_enable = true
  part_name = "rockchip_products"
  subsystem_name = "applications"
}

ohos_prebuilt_etc("browser_opi_hap") {
  source = "hap/Browser/browser.hap"
  module_install_dir = "app/com.xunlong.browser"
  part_name = "rockchip_products"
  subsystem_name = "applications"
}

ohos_prebuilt_etc("filemanager_hap") {
  source = "hap/FileManager.hap"
  module_install_dir = "app/com.ohos.filemanager"
  part_name = "rockchip_products"
  subsystem_name = "applications"
}

group("resources") {
  deps = [
    ":modetest",
    ":busybox",
    ":media-ctl",
    ":v4l2-ctl",
    ":browser_hap",
    ":f_oh_hap",
    ":ndk_opengl_hap",
    ":browser_opi_hap",
    ":filemanager_hap",
  ]
}
