# Copyright (c) 2023 AlgoIdeas <yu19881234@163.com>
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_prebuilt_executable("modetest") {
  source = "tools/bin/modetest"
  module_install_dir = "bin"
  install_images = [ "vendor" ]
  part_name = "device_orangepi_5b"
  install_enable = true
}

ohos_prebuilt_executable("busybox") {
  source = "tools/bin/busybox"
  module_install_dir = "bin"
  install_images = [ "vendor" ]
  part_name = "device_orangepi_5b"
  install_enable = true
}

ohos_prebuilt_executable("media-ctl") {
  source = "tools/bin/media-ctl"
  module_install_dir = "bin"
  install_images = [ "vendor" ]
  part_name = "device_orangepi_5b"
  install_enable = true
}

ohos_prebuilt_executable("v4l2-ctl") {
  source = "tools/bin/v4l2-ctl"
  module_install_dir = "bin"
  install_images = [ "vendor" ]
  part_name = "device_orangepi_5b"
  install_enable = true
}

ohos_prebuilt_etc("browser_hap") {
  source = "hap/Browser.hap"
  module_install_dir = "app/org.ohos.browser.cm"
  install_enable = true
  part_name = "device_orangepi_5b"
  subsystem_name = "applications"
}

ohos_prebuilt_etc("filemanager_hap") {
  source = "hap/FileManager.hap"
  module_install_dir = "app/com.ohos.filemanager"
  part_name = "device_orangepi_5b"
  subsystem_name = "applications"
}

ohos_prebuilt_etc("launcher_hap") {
  source = "hap/Launcher.hap"
  module_install_dir = "app/com.ohos.launcher"
  part_name = "device_orangepi_5b"
  subsystem_name = "applications"
}

ohos_prebuilt_etc("launcher_settings_hap") {
  source = "hap/Launcher_Settings.hap"
  module_install_dir = "app/com.ohos.launcher"
  part_name = "device_orangepi_5b"
  subsystem_name = "applications"
}

ohos_prebuilt_etc("settings_hap") {
  source = "hap/Settings.hap"
  module_install_dir = "app/com.ohos.settings"
  part_name = "device_orangepi_5b"
  subsystem_name = "applications"
}

ohos_prebuilt_etc("navigationbar_hap") {
  source = "hap/SystemUI-NavigationBar.hap"
  module_install_dir = "app/com.ohos.systemui"
  part_name = "device_orangepi_5b"
  subsystem_name = "applications"
}

ohos_prebuilt_etc("f-oh_hap") {
  source = "hap/F-OH.hap"
  module_install_dir = "app/org.ohosdev.foh"
  part_name = "device_orangepi_5b"
  subsystem_name = "applications"
}

group("resources") {
  deps = [
    ":modetest",
    ":busybox",
    ":media-ctl",
    ":v4l2-ctl",
    ":browser_hap",
    ":filemanager_hap",
    ":launcher_hap",
    ":launcher_settings_hap",
    ":settings_hap",
    ":navigationbar_hap",
    ":f-oh_hap",
  ]
}
